Removed deprecated uses of Double and Integer.